<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="admin.example.com.SubTopics.Prob.BALLS">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:visibility="visible">


        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="500dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="30dp"
            android:minHeight="50dp">


            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/ivContactItem2"
                android:layout_toRightOf="@id/ivContactItem2"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/x1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv1"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/ivContactItem2"
                android:layout_toRightOf="@id/ivContactItem2"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/y1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121" />

            <include
                android:id="@+id/div1"
                layout="@layout/item_divider"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/tv11" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/div1"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/x2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv2"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/y2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"/>

            <include
                android:id="@+id/div2"
                layout="@layout/item_divider"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/tv22" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/div2"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/x3"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv3"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/y3"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"/>

            <include
                android:id="@+id/div3"
                layout="@layout/item_divider"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/tv33" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/div3"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/x4"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv4"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/y4"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"/>

            <include
                android:id="@+id/div4"
                layout="@layout/item_divider"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/tv44" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/div4"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/x5"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv5"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/y5"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"/>

            <include
                android:id="@+id/div5"
                layout="@layout/item_divider"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/tv55" />


            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/div5"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="Question 6.\nDirections (1 to 5) : \nRead the following information to answer the given questions.\n
(i) A, B, C, D, E, F and G are playing cards sitting around a circular table\n
(ii) D is not neighbour of C or E.\n
(iii)A is neighbour of B and C.\n
(iv) G, who is second to the left of D, is the neighbour of E and F.
\n\n

1. Which of the following is correct?\n"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv66"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv6"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="Solution –\nWe are given : G is second to the left of D and G is the neighbour of E and F.\n
That is, G is sitting between E and F. But D is not neighbour of E.\n
Hence, EGFD --> ACE\n
Now, A is sitting between B and C.\n
But D is not neighbour of C.\n
So, B is the neighbour of D.\n
\n
B is between A and D
\n"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"/>

            <include
                android:id="@+id/div6"
                layout="@layout/item_divider"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/tv66" />


            <TextView
                android:id="@+id/tv7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/div6"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="Question 7:\n
                 Which of the following will be D's position after E and D interchange their places?
\n"                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv77"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv7"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="Solution –\n
We are given : G is second to the left of D and G is the neighbour of E and F.\n
That is, G is sitting between E and F. But D is not neighbour of E.\n
Hence, EGFD --> ACE\n
Now, A is sitting between B and C.\n
But D is not neighbour of C.\n
So, B is the neighbour of D.\n
F sits to the immediate right of C

\n"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"/>

            <include
                android:id="@+id/div7"
                layout="@layout/item_divider"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/tv77" />


            <TextView
                android:id="@+id/tv8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/div7"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="Question 8.\nWhich of the following will be D's position after E and D interchange their places?
\n"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv88"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv8"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text=" Solution :\n
               We are given : G is second to the left of D and G is the neighbour of E and F.\n
That is, G is sitting between E and F. But D is not neighbour of E.\n
Hence, EGFD --> ACE\n
Now, A is sitting between B and C.\n
But D is not neighbour of C.\n
So, B is the neighbour of D.\n
F sits to the immediate right of C.\n"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"/>

            <include
                android:id="@+id/div8"
                layout="@layout/item_divider"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/tv88" />

            <TextView
                android:id="@+id/tv9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/div8"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="Question 9.\nWhich of the following has the second person sitting between the first and third person?

"
                android:textColor="#212121"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/tv99"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv9"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="Solution –\nWe are given : G is second to the left of D and G is the neighbour of E and F.\n
That is, G is sitting between E and F. But D is not neighbour of E.\n
Hence, EGFD --> ACE\n
Now, A is sitting between B and C.\n
But D is not neighbour of C.\n
So, B is the neighbour of D.\n
F is sitting between G and D.\n"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"/>

            <include
                android:id="@+id/div9"
                layout="@layout/item_divider"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/tv99" />


            <TextView
                android:id="@+id/tv10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/div9"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="Question 10.\nWhich of the following is wrong?\n"
                android:textColor="#212121"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/tv100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv10"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:lineSpacingMultiplier="1.4"
                android:text="Solution –\nWe are given : G is second to the left of D and G is the neighbour of E and F.\n
That is, G is sitting between E and F. But D is not neighbour of E.\n
Hence, EGFD --> ACE\n
Now, A is sitting between B and C.\n
But D is not neighbour of C.\n
So, B is the neighbour of D.\n
B is to the immediate left of D.\n\n\n"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"/>

            <include
                android:id="@+id/div10"
                layout="@layout/item_divider"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_below="@id/tv100" />


        </RelativeLayout>

    </ScrollView>


</FrameLayout>
